@@ -166,8 +166,7 @@
 8	string		WAV\ 					audio/x-wav
 8	string		CDXA					video/mpeg
 0	string		RIFF					audio/x-riff
-# The below is set to 'application/x-ogg' at the request of Ogg Vorbis developers
-0	string		OggS					application/x-ogg
+0	string		OggS					application/ogg
 0	string		pnm:\/\/				audio/x-pn-realaudio
 0	string		rtsp:\/\/				audio/x-pn-realaudio
 0	string		http:\/\/				audio/x-pn-realaudio
