@@ -43,6 +43,15 @@ application/oda
 	_description=ODA document
 	_category=Documents
 
+application/ogg
+	_description=Ogg audio
+	default_action_type=application
+	short_list_application_ids_for_novice_user_level=xmms,freeamp
+	short_list_application_ids_for_intermediate_user_level=xmms,freeamp
+	short_list_application_ids_for_advanced_user_level=xmms,freeamp
+	_category=Audio
+	use_category_default=no
+
 application/pdf
 	_description=PDF document
 	default_action_type=application
